--- a/paquescolar-web/src/main/webapp/app/inicial.xhtml
+++ b/paquescolar-web/src/main/webapp/app/inicial.xhtml
@@ -42,7 +42,7 @@
 
                             <f:facet name="footer">
                                 <p:commandButton value="Generar no Items" icon="fa fa-print" disabled="false" action="#{proveedorController.calcularNoItems()}" />
-                                <p:commandButton value="Generar by EMP" icon="fa fa-print" disabled="false" action="#{proveedorController.calcularNoItemByNit()}" />
+                                <p:commandButton value="Generar item y precios by EMP" icon="fa fa-print" disabled="false" action="#{proveedorController.calcularNoItemByNit()}" />
                                 <p:commandButton value="Generar Precios mp" icon="fa fa-print" disabled="false" action="#{proveedorController.calcularPreciosEmp()}" />
                                 <p:commandButton value="Reversion masiva de contratos" icon="fa fa-print" disabled="false" action="#{resolucionesAdjudicativasController.reversionMasiva()}" />
                             </f:facet>
