--- a/cooperacion-web/src/main/webapp/app/inicio.xhtml
+++ b/cooperacion-web/src/main/webapp/app/inicio.xhtml
@@ -26,12 +26,12 @@
                 <div class="topbar">
                     <div class="topbar-wrapper">
                         <div class="topbar-left">
-                            <h:graphicImage name="images/mined-logo.svg" style="height:100px; margin-right: 20px; font-family: Bembo Std;"/>
+                            <h:graphicImage name="images/mined-logo.svg" style="height:100px; margin-right: 20px;"/>
                         </div>
                         <div class="topbar-right" style="width: 100%;">
                             <p:outputPanel style="float: left !important;">
-                                <h:outputText style="font-family: Bembo Std !important; font-size: 30px" value="Proyectos de Cooperación" /><br/>
-                                <h:outputText style="font-family: Bembo Std !important; font-size: 18px;" value="Dirección Nacional de Planificación" />
+                                <h:outputText style="font-size: 30px" value="Proyectos de Cooperación" /><br/>
+                                <h:outputText style="font-size: 18px;" value="Dirección Nacional de Planificación" />
                             </p:outputPanel>
 
                             <p:commandButton value="Salir" icon="fa fa-sign-out" action="#{guestPreferences.logout()}"
